fixed z-index

--- a/_sass/_paralax.scss
+++ b/_sass/_paralax.scss
@@ -54,7 +54,7 @@ main {
 }
 #slide-1 .bcg {
     background-image:url('/assets/img/oakalley-hd.jpg');
-    z-index: -2;
+    z-index: 1;
   }
 #slide-1 .hsContent {
 	bottom: 150px;
@@ -77,7 +77,10 @@ color: #FFFFFF;
     z-index: 2;
 
 }
-	#slide-3 .bcg {background-image:url('/assets/img/oakalley-hd-blur.jpg')}
+	#slide-3 .bcg {
+        background-image:url('/assets/img/oakalley-hd-blur.jpg');
+        z-index: 2;
+        }
 	#slide-3 .hsContent {}
 	    #slide-3 h2 {
 	        color: #f2ead6;
