--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -64,13 +64,6 @@
     background-color: #1e1e1e;
 }
 
-li:first-child {
-    border-top: 1px solid #111111;
-}
-  li:last-child {
-    border-bottom: 1px solid #111111;
-}
-
 .lib-tab-content {
   margin-left: 100px;
   border-left: 1px solid #191919;
